# net.sourceforge.oncrpc-oncrpc

./: .build  CMakeLists.txt  Jenkinsfile
oncrpc/: CMakeLists.txt  Svc_udp.c  all_oncrpc.h  bcopy.c  clnt_per.c  clnt_simple.c  nt.c  portmap.c  svc_simp.c  xdr_float.c  xdr_mem.c
oncrpc/installer/: install_windows.lua  oncrpc.xml
oncrpc/rpc/: rpc.h  types.h
oncrpc/win32/librpc/: Getrpcen.c  Getrpcpo.c  Xdr.c  Xdr_rec.c  all_oncrpc.h  xdr_mem.c
oncrpc/win32/librpc/rpc/: rpc.h
